--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,18 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "session-file-store": "^1.5.0"
   }
 }
