--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js -e js,jsx,css"
+    "dev": "nodemon app.js -e js,jsx,css",
+    "db": "npx sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "@babel/core": "^7.18.9",
@@ -37,8 +39,13 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "session-file-store": "^1.5.0"
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1",
+    "session-file-store": "^1.5.0",
+    "ws": "^8.8.1"
   }
 }
