--- a/server/db/config/config.json
+++ b/server/db/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "Postgress",
+    "password": "postgres",
     "database": "quiz",
     "host": "127.0.0.1",
     "dialect": "postgres"
